--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@
   padding: 0;
   font-family: Varela Round;
 }
+p, a, h1, h2, h3 {
+  font-family: Varela Round;
+}
 header{
   background-color: #42337d;
   background-repeat: no-repeat;
@@ -54,6 +57,9 @@ footer{
   font-size: 50px;
   padding: 100px 0;
 }
+.titleImg img {
+  width: 100%;
+}
 #menu a{
   color: white;
 }
@@ -79,6 +85,9 @@ footer{
 }
 .padding200px {
   padding: 60px 200px;
+}
+.padding0 {
+  padding: 0;
 }
 .bigYellow {
   color: #defb51;
