--- a/css/data.css
+++ b/css/data.css
@@ -1,29 +1,79 @@
-header{
-background-image: url("../img/MENU.png") ;
-background-repeat: no-repeat;
- position: relative;
-z-index: 1;
-    height: 70px;
-    margin-bottom:-10px;
+#ima1{
+  width: 25%;
+  margin-left: 200px;
 }
-nav{
-margin-top: 35px;
-margin-left: -80px;
+#ima2 {
+  width: 83%;
 }
-#menu a{
-color: white;
+#ima3 {
+  width: 800px;
+  padding-left: 100px;
+  padding-top: 60px;
 }
-#menu a:hover{
-color: #defb51;
+#marginTop {
+  margin-top: 200px;
 }
+#content {
+  background-image:url("../img/background_1.png");
+  background-position: top center;
+  padding-bottom: 150px;
+}
+#cloud {
+  width: 75%;
+}
+#ima5 {
+  width: 25%;
+  padding: 150px 0;
+}
+#nuveConsulta {
+  width: 350px;
+  padding-bottom: 50px;
+  padding-top: 120px;
+}
+#ima7{
+	width: 350px;
+	margin-bottom: 100px;
+	margin-left: 100px;
+  padding-top: 50px;
+}
+#parra{
+	background-color: rgba(255, 255, 255, 0.5);
+	padding: 50px;
+	margin-left: 90px;
+	margin-right: 90px;
+	margin-bottom: 90px;
+}
+#parrafo {
+  	background-color: rgba(255, 255, 255, 0.5);
+  	padding: 50px;
+  	margin-left: 90px;
+  	margin-right: 90px;
+  	margin-bottom: 90px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 #ima{
 	position: absolute;
 	margin-left: 50px;
     margin-top: 10px;
     height: 100px;
-}
-#ima4{
-	width: 490px;
 }
 .parrafo1{
       padding-right: 50px;
@@ -32,19 +82,10 @@ color: #defb51;
     margin-left: 90px;
     margin-top: -90px;
 }
-#ima5{
-	margin-left: 400px;
-	margin-bottom: 100px;
-}
 #ima6{
 	width: 450px;
 	margin-left: 400px;
 	margin-bottom: 100px;
-}
-#ima7{
-	width: 350px;
-	margin-bottom: 100px;
-	margin-left: 100px;
 }
 .parrafo2{
 
@@ -55,64 +96,14 @@ color: #defb51;
 
 
 }
-#parra{
-	background-image: url("../img/hispanos-caja-texto.png");
-	padding: 50px;
-	margin-left: 90px;
-	margin-top: 50px;
-	margin-bottom: 90px;
-}
 #ima8{
 	width: 450px;
 	margin-left:380px;
 }
-#prin{
-background-image:url("../img/background_1.png");
-}
-#ima1{
-margin-top: 110px;
-margin-left: 50px;
-width: 190px;
-margin-bottom: 90px;
-}
-#ima2{
-margin-top: 110px;
-width: 600px;
-    margin-left: 95px;
-}
-#arre{
-	padding-right: 250px;
-	text-align: justify;
-	padding-left: 100px;
-	margin-bottom: 100px;
-}
-#ima3{
-	width: 600px;
-}
-
 #enfasis{
   color: #defb51;
 }
 .ali{
   text-align: right;
       padding-right: 50px;
-}
-footer{
-background-image: url("../img/footer.png");
-  background-repeat: no-repeat;
-    background-size: 1585px 445px;
-}
-#final{
-      padding-right: 200px;
-    text-align: justify;
-}
-#pie{
-    margin-bottom: 200px
-}
-#piee{
-  background-color: black;
-  text-align: center;
-      padding-top: 20px;
-    padding-bottom: 20px;
-    color: white;
 }
