--- a/css/data.css
+++ b/css/data.css
@@ -50,60 +50,27 @@
   	margin-right: 90px;
   	margin-bottom: 90px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-#ima{
-	position: absolute;
-	margin-left: 50px;
-    margin-top: 10px;
-    height: 100px;
-}
-.parrafo1{
-      padding-right: 50px;
-    text-align: justify;
-    padding-left: 60px;
-    margin-left: 90px;
-    margin-top: -90px;
-}
-#ima6{
-	width: 450px;
-	margin-left: 400px;
-	margin-bottom: 100px;
-}
-.parrafo2{
-
-      padding-right: 100px;
-    text-align: justify;
-    padding-left: 60px;
-    margin-left: 0px;
-
-
-}
-#ima8{
-	width: 450px;
-	margin-left:380px;
-}
-#enfasis{
-  color: #defb51;
-}
-.ali{
-  text-align: right;
-      padding-right: 50px;
+@media (max-width: 1366px) {
+  #content {
+    padding-bottom: 130px;
+  }
+  #cloud {
+    margin-top: 200px;
+  }
+  #nuveConsulta {
+    padding-top: 160px;
+  }
+  #nuveConsulta {
+    padding-top: 90px;
+  }
+  #nuveConsulta {
+      padding-bottom: 25px;
+      padding-top: 25px;
+  }
+  #parrafo {
+    margin-bottom: 50px;
+  }
+  #dineroImg {
+    width: 30%;
+  }
 }
