--- a/css/index.css
+++ b/css/index.css
@@ -99,7 +99,7 @@
 #masSocial{
   background-image: url("../img/background-5.png");
   background-size: cover;
-  background-position: center;
+  background-position: bottom center;
 }
 #masSocialWoman{
   margin-top: -35px;
@@ -111,19 +111,37 @@
   padding: 200px 200px 200px;
 }
 #comprenderle{
-  background-image: url("../img/background-6.png");
+  background-color: rgb(168, 183, 191);
   background-size: cover;
 }
 #comprenderleImg img{
   width: 40%;
   position: absolute;
   left: 200px;
+  margin-top: -30px;
+  z-index: 1;
+}
+#ele {
+  width: 400px;
+  padding-top: 200px;
+  margin-left: 100px;
 }
 #paragraph-2 {
   padding: 50px 0 0;
 }
 #paragraph-3 {
-  padding: 400px 200px 200px;
+  padding: 325px 0 0 25px;
+}
+#bombilla img {
+  position: absolute;
+  right: 50px;
+  margin-top: 25px;
+}
+#people {
+  width: 480px;
+  position: relative;
+  padding-top: 143px;
+  margin-left: 75px;
 }
 @media (max-width: 1366px) {
   .header-content{
@@ -131,5 +149,26 @@
   }
   .degraded {
     top: 550px;
+  }
+  #contentText, #paragraph {
+    padding: 0 150px;
+  }
+  #ele {
+      width: 400px;
+      padding-top: 160px;
+      margin-left: 70px;
+    }
+  #paragraph-3 {
+        padding: 250px 0 0 0px;
+    }
+  #people {
+    width: 420px;
+    padding-top: 172px;
+  }
+  #bombilla img {
+    position: absolute;
+    right: 30px;
+    margin-top: 25px;
+    width: 180px;
   }
 }
