--- a/css/style.css
+++ b/css/style.css
@@ -135,18 +135,8 @@ footer{
 	width: 600px;
   padding-bottom: 125px;
 }
-
-
-
-
-
-
-
-
-
-
-
-#parrafo4{
-  margin-left: 100px;
-  margin-right: 1000px;
+@media (max-width: 1680px) {
+  #content {
+    padding-bottom: 100px;
+  }
 }
