--- a/css/data.css
+++ b/css/data.css
@@ -74,3 +74,17 @@
     width: 30%;
   }
 }
+@media (max-width: 1680px) {
+  #cloud {
+    margin-top: 100px;
+  }
+  #parrafo {
+    margin-bottom: 50px;
+  }
+  #content {
+    padding-bottom: 100px;
+  }
+  #dineroImg {
+    width: 30%;
+  }
+}
