--- a/css/style.css
+++ b/css/style.css
@@ -139,4 +139,10 @@ footer{
   #content {
     padding-bottom: 100px;
   }
+  #column2Footer {
+    padding: 40px 100px 40px 40px;
+  }
+  #content {
+    padding-bottom: 100px;
+  }
 }
