--- a/css/adquisicion.css
+++ b/css/adquisicion.css
@@ -54,6 +54,63 @@
 #paddingRight200px {
   padding-right: 200px;
 }
+@media (max-width: 767px) {
+  #titleTrafico img {
+    width: 100%;
+    margin-top: 80px;
+    margin-bottom: 50px;
+  }
+  #titleTrafico img {
+  }
+  #espacio figure img {
+      margin-left: 0 !important;
+      width: 100% !important;
+  }
+  #espacio {
+    margin-top: 20px;
+  }
+  #espacio .paddingTop100 {
+    padding: 20px 20px 0 70px;
+    margin-top: -100px;
+  }
+  #diagramAdquision {
+    margin-top: 0;
+  }
+  .title {
+    font-size: 30px;
+    padding: 50px 0;
+  }
+  #parrafo3 {
+    padding: 0 20px;
+  }
+  #loQueTuNecesitas {
+    padding-bottom: 50px;
+  }
+  #loQueTuNecesitas figure img, #secondColumn .row {
+    display: none;
+  }
+  #ima7 {
+    width: 100% !important;
+    margin-left: 0 !important;
+    margin-top: -20px !important;
+    margin-bottom: 40px !important;
+  }
+  .padding200px, #paddingRight200px {
+    padding: 0 20px;
+  }
+  .mov {
+    margin-right: 0 !important;
+  }
+  #enUsa {
+    padding-bottom: 50px;
+  }
+  #luego figure img {
+    margin-top: 50px;
+    width: 100%;
+    margin-left: 0;
+    margin-bottom: 25px;
+  }
+}
 @media (max-width: 1366px) {
   #luego {
     background-position: -19px -19px;
@@ -101,7 +158,7 @@
     margin-bottom: 55px
 }
 .mov{
-  margin-right: 90px !important;
+  margin-right: 90px;
 }
 #parrafo4{
   color: white;
