--- a/css/data.css
+++ b/css/data.css
@@ -74,6 +74,58 @@
     width: 30%;
   }
 }
+@media (max-width: 767px) {
+  #ima1, #cloud, #ima5, #calculadoraImg {
+    display: none;
+  }
+  #content {
+    padding-top: 0;
+    padding-bottom: 50px;
+  }
+  #ima2 {
+    padding: 80px 0 50px;
+    width: 100%;
+  }
+  .paddingTop100, .space50px {
+    padding: 0px;
+  }
+  #ima3 {
+    width: 100%;
+    padding-left: 0;
+    padding-top: 20px;
+  }
+  #marginTop {
+      margin-top: 0px;
+      padding: 0 20px 0 70px;
+      margin-top: -50px;
+  }
+  #nuveConsulta {
+    width: 100%;
+    padding-top: 80px;
+  }
+  #ima7 {
+    width: 100%;
+    margin-bottom: 20px;
+    margin-left: 0;
+    padding-top: 0;
+  }
+  #parra, #parrafo {
+    padding: 50px;
+    margin: 0;
+  }
+  #parrafo {
+    background-color: rgba(255, 0, 0, 0);
+    padding: 0;
+  }
+  #dineroImg {
+    width: 40%;
+  }
+  #content {
+    padding-bottom: 50px;
+    background-position: bottom right;
+    background-repeat: no-repeat;
+  }
+}
 @media (max-width: 1680px) {
   #cloud {
     margin-top: 100px;
