--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 p, a, h1, h2, h3 {
   font-family: Varela Round;
 }
-header{
+#menu {
   background-color: #42337d;
   background-repeat: no-repeat;
   position: relative;
@@ -18,8 +18,8 @@ header{
   margin-bottom:-10px;
   padding: 30px 0 20px;
 }
-header .list-inline {
-  margin-bottom: 0;
+.navbar {
+  border-radius: 0;
 }
 p, dd, dt {
   font-size: 18px;
@@ -42,11 +42,6 @@ footer{
   color: white;
 }
 .row { margin: 0; }
-.list-inline>li {
-    display: inline-block;
-    padding-right: 20px;
-    padding-left: 20px;
-}
 .morespace {
   padding-bottom: 15px;
 }
@@ -66,11 +61,21 @@ footer{
 #menu a:hover{
   color: #defb51;
 }
+.navbar-default {
+    border-width: 0;
+}
+.navbar-default .navbar-nav>li {
+    text-align: center;
+}
+.navbar-default .navbar-nav>li>a {
+    padding: 0 25px;
+}
 #logo-menu{
   position: absolute;
-  right: 50px;
+  left: 15%;
   margin-top: -20px;
   width: 120px;
+  z-index: 1;
 }
 #logo-menu img {
   width: 100%;
@@ -113,11 +118,6 @@ footer{
 #footerStyle p {
   margin: 0;
 }
-@media (max-width: 1366px) {
-  #column2Footer {
-    padding: 40px 60px;
-  }
-}
 #content {
   background-image:url("../img/background1.png");
   padding-top: 150px;
@@ -135,14 +135,72 @@ footer{
 	width: 600px;
   padding-bottom: 125px;
 }
+@media (max-width: 767px) {
+  #menu {
+    padding: 15px 0 15px;
+  }
+  #logo-menu {
+    margin-top: 0;
+    left: 5%;
+  }
+  .navbar-default .navbar-nav>li {
+    text-align: right;
+    padding: 15px 0;
+  }
+  #contentText, #paragraph, #paragraph-1, #paragraph-2, #paragraph-3 {
+    padding: 0 30px !important;
+  }
+  #numbers {
+    height: auto !important;
+  }
+  #trafficImg {
+    width: 100% !important;
+    margin-bottom: 20px;
+  }
+  #masSocialWoman, #comprenderleImg img {
+    margin-top: -20px !important;
+    right: 0 !important;
+    position: absolute !important;
+    width: 100% !important;
+    left: 0 !important;
+  }
+  #masSocial .row {
+    padding: 50px 50px 0 0 !important;
+  }
+  #paragraph-3 {
+    padding: 50px 20px 30px 80px !important;
+  }
+  #ele, #people {
+    display: none;
+  }
+  #bombilla img {
+    right: -30% !important;
+    width: 50% !important;
+    margin-top: 300px !important;
+  }
+  #column2Footer {
+        padding: 15px 50px 15px 15px !important;
+  }
+  #column2Footer p { font-size: 14px; }
+  #column2Footer h3 {
+    font-size: 18px;
+    margin-top: 0;
+  }
+  footer {
+    background-color: #3c2878;
+    background-image: none;
+  }
+}
+@media (min-width: 768px) {
+  #menuElements {
+    margin-left: 30%;
+  }
+}
 @media (max-width: 1680px) {
   #content {
     padding-bottom: 100px;
   }
   #column2Footer {
     padding: 40px 100px 40px 40px;
-  }
-  #content {
-    padding-bottom: 100px;
   }
 }
