--- a/css/consultoria.css
+++ b/css/consultoria.css
@@ -98,6 +98,13 @@
     width: 100%;
     margin-bottom: 20px;
   }
+  #paragraph {
+    color: rgb(51, 51, 51);
+    padding: 0 20px !important;
+  }
+  #boxText {
+    font-size: 16px;
+  }
 }
 @media (max-width: 1366px) {
   #secondSection {
