--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ dd {
 footer .row{
   background-image: url("../img/footer.png");
   background-repeat: no-repeat;
-  background-position: bottom center;
+  background-position: bottom left;
   min-height: 350px;
 }
 
@@ -154,6 +154,15 @@ footer .row{
   #contentText, #paragraph, #paragraph-1, #paragraph-2, #paragraph-3 {
     padding: 0 30px !important;
   }
+  #paragraph {
+    color: white;
+    padding: 50px 70px 0 20px !important;
+}
+  #proyectoIntegral .row figure img {
+    position: absolute;
+    width: 100%;
+    margin: 300px 0px 0px -190px;
+}
   #numbers {
     height: auto !important;
   }
@@ -174,7 +183,7 @@ footer .row{
   #paragraph-3 {
     padding: 50px 20px 30px 80px !important;
   }
-  #ele, #people {
+  #ele, #people, #diagramIndex img {
     display: none;
   }
   #bombilla img {
@@ -183,7 +192,7 @@ footer .row{
     margin-top: 300px !important;
   }
   #column2Footer {
-        padding: 15px 50px 15px 15px !important;
+        padding: 20px !important;
   }
   #column2Footer p { font-size: 14px; }
   #column2Footer h3 {
@@ -196,6 +205,29 @@ footer .row{
   }
   footer .row{
     min-height: auto;
+  }
+  #piText {
+    position: absolute !important;
+    margin-top: -10px !important;
+    margin-left: 0 !important;
+    width: 80% !important;
+  }
+  #piMen {
+    position: absolute !important;
+    margin-left: 0 !important;
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+    width: 20% !important;
+    right: 0 !important;
+  }
+  #preparate .row {
+    padding-bottom: 50px !important;
+  }
+  #contentText {
+    padding: 20px 20px 0 !important;
+  }
+  #paragraph-2 {
+    padding: 0 !important;
   }
 }
 @media (min-width: 768px) {
